--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -251,8 +251,9 @@ a {
 		justify-content: center;
 		text-align: center;
 
-		@include wider-than(500px) {
-			display: flex;	
+		@include wider-than(600px) {
+			display: flex;
+			text-align: left;
 		}
 		
 		img {
@@ -260,16 +261,19 @@ a {
 			margin: 0 auto;
 			border-radius: 50%;
 
+			// @include wider-than(500px) {
+			// 	margin-left: 20px;
+			// 	margin-right: 20px;
+			// }
+
 			@include wider-than(600px) {
-				margin: 0 20px;
+				margin-left: 20px;
+				margin-right: 40px;
 			}
 		}
 
-		h1,
 		p {
-			@include wider-than(500px) {
-				width: 100%;
-			}
+			line-height: 2;
 		}
 	}
 }
